objects/Requirement__c.object
<CustomObject>
    <description>Requirement tracked by the Requirements Tracker application.</description>
    <fields>
        <fullName>App_Integration__c</fullName>
        <label>App Integration</label>
        <picklist>
            <picklistValues>
                <fullName>ACB Paranet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catsweb/CAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco Call Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Direct Worldwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Echosign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mappoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle EBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinnacle Smartstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plateau LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostCode-Anywhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey Monkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle EBS Ship-to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle EBS Bill-to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle EBS Purchase Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle EBS Sales Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle EBS Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle EBS Dealer Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartPack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silverpop</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>As_Is_SPOTS_Functionality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As-Is SPOTS Functionality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Future Phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eliminated (not needed for business)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Low (&lt;1 hour)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (1-8 hours)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High (8+ hours)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enhancement_Area__c</fullName>
        <description>This field captures what area of the company this enhancement request is most closely tied to.</description>
        <label>Enhancement Area</label>
        <picklist>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enhancement_Effect__c</fullName>
        <description>This field documents what downstream effects the enhancement request will have.</description>
        <label>Enhancement Effect</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Avoidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Effeciency</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Est_Financial_Impact__c</fullName>
        <description>This field documents the predicted financial impact if Appirio does the enhancement (revenue generated or cost avoided).</description>
        <label>Est. Financial Impact</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Implementation_Details__c</fullName>
        <description>Design and build out notes</description>
        <label>Implementation Details</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <label>Implementation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered to UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1_Process__c</fullName>
        <label>Level 1 Process</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partner Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Opportunity &amp; Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System &amp; Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Orders</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_2_Process__c</fullName>
        <label>Level 2 Process</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activating Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communicating with Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design, Proposals and Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designs Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluate Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage Responses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage Sites and Child Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partner Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measuring Customer Satisfaction Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measuring Partner Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewing and Updating Annual Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewing Partner Status and Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Teams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Score Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surveys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_3_Process__c</fullName>
        <label>Level 3 Process</label>
        <picklist>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity  &amp; Activity History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding Profile Attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessing Partner Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigning New Partner a Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigning Opportunities to Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoCAD or a Content Mangement System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts &amp; HERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts and Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrections &amp; Revisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defining Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demoting a Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design, Proposals and Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Files</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Homes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Homes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This requirement is a candidate for the July release, also known as Phase 1.</inlineHelpText>
        <label>Phase 1 (July Release)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Ordering - Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Ordering - Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Ordering - Phase 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise CRM</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prototyped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prototyped?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RLCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RLCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requirements (Requested By)</relationshipLabel>
        <relationshipName>Requirement1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted &amp; In Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete (Written and Ready for Review)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out Of Scope (not in SOW-1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Systems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Number__c</fullName>
        <label>To Be Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Project__c</controllingField>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Runtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Tracking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPP</label>
        <type>Checkbox</type>
    </fields>
    <label>Requirement</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <recordTypes>
        <fullName>CRM_Requirement</fullName>
        <active>true</active>
        <description>For Requirements for the CRM project.</description>
        <label>CRM Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Online_Order_Requirement</fullName>
        <active>true</active>
        <description>For the Onilne Ordering project.</description>
        <label>Online Order Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phase_2_Requirement</fullName>
        <active>true</active>
        <description>For Phase 2 Requirements - Systems, New Homes, UPP</description>
        <label>Phase 2 Requirement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Duplicate</fullName>
        <active>true</active>
        <description>If a status of &quot;Duplicate&quot; is selected, Parent Requirement field must be populated</description>
        <errorConditionFormula>AND(
        ISPICKVAL(Status__c ,&quot;Duplicate&quot;),
        Parent_Requirement__c = null
     )</errorConditionFormula>
        <errorDisplayField>Parent_Requirement__c</errorDisplayField>
        <errorMessage>Please select a Parent Requirement for this duplicate requirement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Out_of_Scope</fullName>
        <active>true</active>
        <description>If a status of &quot;Out of Scope&quot; is selected, Disposition must be populated</description>
        <errorConditionFormula>AND(
        ISPICKVAL(Status__c ,&quot;Out Of Scope (not in SOW-1)&quot;),
       ISPICKVAL( Disposition__c  ,&quot;&quot;)     )</errorConditionFormula>
        <errorDisplayField>Disposition__c</errorDisplayField>
        <errorMessage>Please enter a disposition for this requirement</errorMessage>
    </validationRules>
</CustomObject>